chore: update clean script to show deleted files
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 /node_modules
 *.log
 .DS_Store
-/.vercel
-/.cache
-/.output
+/.vercel/*
+/.cache/*
+/.output/*
 /api/index.js
 /api/index.js.map
-/api/_assets
-/build
-/public/build
+/api/_assets/*
+/build/*
+/public/build/*
 app/styles/app.css
 .eslintcache
 tsconfig.tsbuildinfo
