--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint": "^8.31.0",
     "eslint-plugin-prefer-let": "^3.0.1",
     "husky": "^8.0.3",
+    "kleur": "^4.1.5",
     "lint-staged": "^13.1.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
