fixup! chore: update clean script to show deleted files

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clsx": "^1.2.1",
     "etag": "^1.8.1",
     "fathom-client": "^3.5.0",
+    "glob": "^8.0.3",
     "is-ci": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -48,6 +49,7 @@
     "del": "^7.0.0",
     "eslint": "^8.31.0",
     "eslint-plugin-prefer-let": "^3.0.1",
+    "gitignore-fs": "^2.2.2",
     "husky": "^8.0.3",
     "kleur": "^4.1.5",
     "lint-staged": "^13.1.0",
