--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "build:remix": "remix build",
     "css": "tailwindcss -o app/styles/app.css --postcss",
     "type-check": "tsc",
-    "lint": "eslint --ignore-path .gitignore --cache --fix --ext \".js,.ts,.tsx,.jsx,.mts,.cts\" .",
-    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|cts|mts|md|graphql|mdx)\"",
+    "lint": "eslint --ignore-path .gitignore --cache --fix .",
+    "format": "prettier --ignore-path .gitignore --write .",
     "validate": "run-p lint format type-check",
     "prepare": "is-ci || husky install"
   },
@@ -26,14 +26,15 @@
     "@remix-run/node": "0.0.0-nightly-d593e4a-20230117",
     "@remix-run/react": "0.0.0-nightly-d593e4a-20230117",
     "@remix-run/vercel": "0.0.0-nightly-d593e4a-20230117",
+    "@vercel/node": "^2.8.13",
     "clsx": "^1.2.1",
     "etag": "^1.8.1",
     "fathom-client": "^3.5.0",
-    "glob": "^8.0.3",
+    "glob": "^8.1.0",
     "is-ci": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "type-fest": "^3.5.1"
+    "type-fest": "^3.5.2"
   },
   "devDependencies": {
     "@remix-run/dev": "0.0.0-nightly-d593e4a-20230117",
@@ -43,10 +44,10 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
-    "@typescript/lib-dom": "npm:@types/web@^0.0.87",
+    "@typescript/lib-dom": "npm:@types/web@^0.0.88",
     "autoprefixer": "^10.4.13",
     "del": "^7.0.0",
-    "eslint": "^8.31.0",
+    "eslint": "^8.32.0",
     "eslint-plugin-prefer-let": "^3.0.1",
     "gitignore-fs": "^2.2.2",
     "husky": "^8.0.3",
