--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
   "dependencies": {
     "@mcansh/remix-secure-headers": "^0.6.2",
     "@mcansh/tailwind-var": "^0.1.0",
-    "@remix-run/node": "0.0.0-nightly-d593e4a-20230117",
-    "@remix-run/react": "0.0.0-nightly-d593e4a-20230117",
-    "@remix-run/vercel": "0.0.0-nightly-d593e4a-20230117",
-    "@vercel/node": "^2.8.13",
+    "@remix-run/node": "1.11.0",
+    "@remix-run/react": "1.11.0",
+    "@remix-run/vercel": "1.11.0",
+    "@vercel/node": "^2.8.14",
     "clsx": "^1.2.1",
     "etag": "^1.8.1",
     "fathom-client": "^3.5.0",
@@ -37,12 +37,12 @@
     "type-fest": "^3.5.2"
   },
   "devDependencies": {
-    "@remix-run/dev": "0.0.0-nightly-d593e4a-20230117",
-    "@remix-run/eslint-config": "0.0.0-nightly-d593e4a-20230117",
-    "@remix-run/serve": "0.0.0-nightly-d593e4a-20230117",
+    "@remix-run/dev": "1.11.0",
+    "@remix-run/eslint-config": "1.11.0",
+    "@remix-run/serve": "1.11.0",
     "@types/etag": "^1.8.1",
     "@types/node": "^18.11.18",
-    "@types/react": "^18.0.26",
+    "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@typescript/lib-dom": "npm:@types/web@^0.0.88",
     "autoprefixer": "^10.4.13",
