--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "fathom-client": "^3.5.0",
     "glob": "^8.1.0",
     "is-ci": "^3.0.1",
+    "pretty-cache-header": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "type-fest": "^3.5.2"
