--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
   },
   "dependencies": {
     "@mcansh/remix-secure-headers": "^0.6.2",
-    "@remix-run/node": "^1.12.0",
-    "@remix-run/react": "^1.12.0",
-    "@remix-run/vercel": "^1.12.0",
+    "@remix-run/node": "1.13.0-pre.2",
+    "@remix-run/react": "1.13.0-pre.2",
+    "@remix-run/vercel": "1.13.0-pre.2",
     "@sentry/remix": "^7.37.1",
     "@vercel/node": "^2.9.2",
     "clsx": "^1.2.1",
@@ -37,9 +37,9 @@
     "type-fest": "^3.5.7"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.12.0",
-    "@remix-run/eslint-config": "^1.12.0",
-    "@remix-run/serve": "^1.12.0",
+    "@remix-run/dev": "1.13.0-pre.2",
+    "@remix-run/eslint-config": "1.13.0-pre.2",
+    "@remix-run/serve": "1.13.0-pre.2",
     "@sentry/cli": "^2.12.0",
     "@sindresorhus/slugify": "^2.2.0",
     "@types/etag": "^1.8.1",
