--- a/package.json
+++ b/package.json
@@ -7,13 +7,8 @@
   "sideEffects": false,
   "scripts": {
     "clean": "./scripts/clean.mjs",
-    "dev": "npm run clean && run-p dev:*",
-    "dev:css": "npm run css -- --watch",
-    "dev:remix": "remix dev",
-    "build": "run-s clean type-check && run-s build:*",
-    "build:css": "npm run css -- --minify",
-    "build:remix": "remix build",
-    "css": "tailwindcss -o app/styles/app.css --postcss",
+    "dev": "npm run clean && remix dev",
+    "build": "run-s clean type-check && remix build",
     "type-check": "tsc",
     "lint": "eslint --ignore-path .gitignore --cache --fix .",
     "format": "prettier --ignore-path .gitignore --write .",
@@ -22,10 +17,8 @@
   },
   "dependencies": {
     "@mcansh/remix-secure-headers": "^0.6.2",
-    "@remix-run/node": "1.12.0",
-    "@remix-run/react": "1.12.0",
-    "@remix-run/vercel": "1.12.0",
-    "@vercel/node": "^2.8.17",
+    "@remix-run/node": "1.13.0",
+    "@remix-run/react": "1.13.0",
     "clsx": "^1.2.1",
     "etag": "^1.8.1",
     "fathom-client": "^3.5.0",
@@ -34,31 +27,31 @@
     "pretty-cache-header": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "type-fest": "^3.5.4"
+    "type-fest": "^3.6.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "1.12.0",
-    "@remix-run/eslint-config": "1.12.0",
-    "@remix-run/serve": "1.12.0",
+    "@remix-run/dev": "1.13.0",
+    "@remix-run/eslint-config": "1.13.0",
+    "@remix-run/serve": "1.13.0",
     "@types/etag": "^1.8.1",
-    "@types/node": "^18.11.18",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
+    "@types/node": "^18.13.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "@typescript/lib-dom": "npm:@types/web@^0.0.88",
     "autoprefixer": "^10.4.13",
     "del": "^7.0.0",
-    "eslint": "^8.33.0",
+    "eslint": "^8.34.0",
     "eslint-plugin-prefer-let": "^3.0.1",
     "gitignore-fs": "^2.2.2",
     "husky": "^8.0.3",
     "kleur": "^4.1.5",
-    "lint-staged": "^13.1.0",
+    "lint-staged": "^13.1.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
     "postcss-100vh-fix": "^1.0.2",
-    "prettier": "^2.8.3",
-    "prettier-plugin-tailwindcss": "^0.2.2",
-    "tailwindcss": "^3.2.4",
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.3",
+    "tailwindcss": "^3.2.7",
     "tailwindcss-padding-safe": "^1.0.6",
     "typescript": "^4.9.5"
   },
