--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@mcansh/remix-secure-headers": "^0.6.2",
+    "@netlify/functions": "^1.4.0",
+    "@remix-run/netlify": "^1.13.0",
     "@remix-run/node": "1.13.0",
     "@remix-run/react": "1.13.0",
     "clsx": "^1.2.1",
@@ -46,6 +48,7 @@
     "husky": "^8.0.3",
     "kleur": "^4.1.5",
     "lint-staged": "^13.1.2",
+    "netlify-cli": "^12.13.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
     "postcss-100vh-fix": "^1.0.2",
