--- a/netlify.toml
+++ b/netlify.toml
@@ -18,3 +18,8 @@
   for = "/build/*"
   [headers.values]
     "Cache-Control" = "public, max-age=31536000, s-maxage=31536000"
+
+[[headers]]
+  for = "/manifest.webmanifest"
+  [headers.values]
+    "Content-Type" = "application/manifest+json"
