--- a/package.json
+++ b/package.json
@@ -22,20 +22,19 @@
     "@remix-run/node": "1.13.0",
     "@remix-run/react": "1.13.0",
     "clsx": "^1.2.1",
-    "etag": "^1.8.1",
     "fathom-client": "^3.5.0",
     "glob": "^8.1.0",
     "is-ci": "^3.0.1",
+    "isbot": "^3.6.6",
     "pretty-cache-header": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remix-utils": "^6.0.0",
     "type-fest": "^3.6.0"
   },
   "devDependencies": {
     "@remix-run/dev": "1.13.0",
     "@remix-run/eslint-config": "1.13.0",
-    "@remix-run/serve": "1.13.0",
-    "@types/etag": "^1.8.1",
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
