--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@mcansh/remix-secure-headers": "^0.6.2",
     "@netlify/functions": "^1.4.0",
-    "@remix-run/netlify": "^1.13.0",
+    "@netlify/remix-edge-adapter": "1.0.0",
     "@remix-run/node": "1.13.0",
     "@remix-run/react": "1.13.0",
     "clsx": "^1.2.1",
