--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@mcansh/remix-secure-headers": "^0.6.2",
     "@netlify/functions": "^1.4.0",
     "@netlify/remix-edge-adapter": "1.0.0",
-    "@remix-run/node": "1.13.0",
+    "@netlify/remix-runtime": "1.0.0",
     "@remix-run/react": "1.13.0",
     "clsx": "^1.2.1",
     "fathom-client": "^3.5.0",
