--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   "dependencies": {
     "@mcansh/remix-secure-headers": "^0.6.2",
     "@netlify/functions": "^1.4.0",
-    "@remix-run/netlify": "^1.13.0",
-    "@remix-run/node": "1.13.0",
+    "@netlify/remix-edge-adapter": "1.0.0",
+    "@netlify/remix-runtime": "1.0.0",
     "@remix-run/react": "1.13.0",
     "clsx": "^1.2.1",
     "fathom-client": "^3.5.0",
@@ -35,7 +35,6 @@
   "devDependencies": {
     "@remix-run/dev": "1.13.0",
     "@remix-run/eslint-config": "1.13.0",
-    "@types/node": "^18.13.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript/lib-dom": "npm:@types/web@^0.0.91",
