--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   "dependencies": {
     "@mcansh/remix-secure-headers": "^0.6.2",
     "@netlify/functions": "^1.4.0",
-    "@netlify/remix-edge-adapter": "1.0.0",
-    "@netlify/remix-runtime": "1.0.0",
-    "@remix-run/react": "1.13.0",
+    "@netlify/remix-edge-adapter": "^1.0.0",
+    "@netlify/remix-runtime": "^1.0.0",
+    "@remix-run/react": "^1.13.0",
     "clsx": "^1.2.1",
     "fathom-client": "^3.5.0",
     "glob": "^8.1.0",
@@ -33,8 +33,8 @@
     "type-fest": "^3.6.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "1.13.0",
-    "@remix-run/eslint-config": "1.13.0",
+    "@remix-run/dev": "^1.13.0",
+    "@remix-run/eslint-config": "^1.13.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript/lib-dom": "npm:@types/web@^0.0.91",
@@ -46,7 +46,7 @@
     "husky": "^8.0.3",
     "kleur": "^4.1.5",
     "lint-staged": "^13.1.2",
-    "netlify-cli": "^12.13.1",
+    "netlify-cli": "^13.0.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
     "postcss-100vh-fix": "^1.0.2",
@@ -59,6 +59,9 @@
   "lint-staged": {
     "*.+(js|jsx|ts|tsx|cts|mts)": [
       "eslint --fix"
+    ],
+    "*": [
+      "prettier --write --ignore-unknown"
     ]
   }
 }
