--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@mcansh/remix-secure-headers": "^0.6.2",
-    "@netlify/functions": "^1.4.0",
+    "@netlify/edge-functions": "^2.0.0",
     "@netlify/remix-edge-adapter": "^1.0.0",
     "@netlify/remix-runtime": "^1.0.0",
     "@remix-run/react": "^1.14.1",
