--- a/netlify.toml
+++ b/netlify.toml
@@ -11,7 +11,7 @@
 
 [[redirects]]
   from = "/*"
-  to = "/.netlify/functions/server"
+  to = "/.netlify/edge-functions/server.js"
   status = 200
 
 [[headers]]
