--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,4 @@
 {
   "typescript.tsdk": "node_modules/typescript/lib",
-  "deno.enablePaths": ["netlify/edge-functions/", ".netlify/edge-functions/"],
-  "deno.unstable": true,
-  "deno.importMap": ".netlify/edge-functions-import-map.json",
-  "deno.internalDebug": false
+  "typescript.enablePromptUseWorkspaceTsdk": true
 }
