--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "license": "MIT",
   "sideEffects": false,
   "scripts": {
-    "clean": "./scripts/clean.mjs",
-    "dev": "npm run clean && remix dev",
     "build": "run-s clean type-check && remix build",
+    "clean": "./scripts/clean.mjs",
+    "dev": "npm-run-all clean --parallel dev:*",
+    "dev:remix": "remix dev",
+    "dev:server": "cross-env NODE_ENV=development node --require dotenv/config --watch ./server.js",
+    "start": "node ./server.js",
     "type-check": "tsc",
     "lint": "eslint --ignore-path .gitignore --cache --fix .",
     "format": "prettier --ignore-path .gitignore --ignore-unknown --write .",
@@ -16,12 +19,12 @@
     "prepare": "is-ci || husky install"
   },
   "dependencies": {
+    "@mcansh/remix-fastify": "^2.6.1",
     "@mcansh/remix-secure-headers": "^0.6.2",
-    "@netlify/edge-functions": "^2.0.0",
-    "@netlify/remix-edge-adapter": "^1.1.0",
-    "@netlify/remix-runtime": "^1.1.0",
+    "@remix-run/node": "^1.14.3",
     "@remix-run/react": "^1.14.3",
     "clsx": "^1.2.1",
+    "fastify": "^4.14.1",
     "fathom-client": "^3.5.0",
     "glob": "^9.3.0",
     "is-ci": "^3.0.1",
@@ -39,6 +42,7 @@
     "@types/react-dom": "^18.0.11",
     "@typescript/lib-dom": "npm:@types/web@^0.0.97",
     "autoprefixer": "^10.4.14",
+    "cross-env": "^7.0.3",
     "del": "^7.0.0",
     "eslint": "^8.36.0",
     "eslint-plugin-prefer-let": "^3.0.1",
@@ -46,7 +50,6 @@
     "husky": "^8.0.3",
     "kleur": "^4.1.5",
     "lint-staged": "^13.2.0",
-    "netlify-cli": "^13.1.6",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
     "postcss-100vh-fix": "^1.0.2",
