--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "dependencies": {
     "@mcansh/remix-fastify": "^2.6.4",
     "@mcansh/remix-secure-headers": "^0.6.2",
-    "@remix-run/node": "0.0.0-nightly-d6c9737-20230322",
-    "@remix-run/react": "0.0.0-nightly-d6c9737-20230322",
+    "@remix-run/node": "1.15.0-pre.1",
+    "@remix-run/react": "1.15.0-pre.1",
     "clsx": "^1.2.1",
     "fastify": "^4.15.0",
     "fathom-client": "^3.5.0",
@@ -36,8 +36,8 @@
     "type-fest": "^3.6.1"
   },
   "devDependencies": {
-    "@remix-run/dev": "0.0.0-nightly-d6c9737-20230322",
-    "@remix-run/eslint-config": "0.0.0-nightly-d6c9737-20230322",
+    "@remix-run/dev": "1.15.0-pre.1",
+    "@remix-run/eslint-config": "1.15.0-pre.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript/lib-dom": "npm:@types/web@^0.0.99",
