--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "npm-run-all clean --parallel dev:*",
     "dev:remix": "remix dev",
     "dev:server": "cross-env NODE_ENV=development node --require dotenv/config --watch ./server.js",
-    "start": "node ./server.js",
+    "start": "cross-env NODE_ENV=production node ./server.js",
     "type-check": "tsc",
     "lint": "eslint --ignore-path .gitignore --cache --fix .",
     "format": "prettier --ignore-path .gitignore --ignore-unknown --write .",
@@ -24,6 +24,7 @@
     "@remix-run/node": "1.15.0-pre.1",
     "@remix-run/react": "1.15.0-pre.1",
     "clsx": "^1.2.1",
+    "cross-env": "^7.0.3",
     "fastify": "^4.15.0",
     "fathom-client": "^3.5.0",
     "glob": "^9.3.1",
@@ -42,7 +43,6 @@
     "@types/react-dom": "^18.0.11",
     "@typescript/lib-dom": "npm:@types/web@^0.0.99",
     "autoprefixer": "^10.4.14",
-    "cross-env": "^7.0.3",
     "del": "^7.0.0",
     "eslint": "^8.36.0",
     "eslint-plugin-prefer-let": "^3.0.1",
