--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "postcss-100vh-fix": "^1.0.2",
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.2.5",
-    "tailwindcss": "0.0.0-insiders.25376f6",
+    "tailwindcss": "3.3.0",
     "tailwindcss-padding-safe": "^1.0.6",
     "typescript": "^5.0.2"
   },
