--- a/package.json
+++ b/package.json
@@ -19,45 +19,45 @@
     "prepare": "is-ci || husky install"
   },
   "dependencies": {
-    "@mcansh/remix-fastify": "^2.6.4",
+    "@mcansh/remix-fastify": "^2.7.0",
     "@mcansh/remix-secure-headers": "^0.7.1",
-    "@remix-run/node": "1.15.0-pre.2",
-    "@remix-run/react": "1.15.0-pre.2",
+    "@remix-run/node": "^1.15.0",
+    "@remix-run/react": "^1.15.0",
     "clsx": "^1.2.1",
     "cross-env": "^7.0.3",
     "fastify": "^4.15.0",
     "fathom-client": "^3.5.0",
-    "glob": "^9.3.2",
+    "glob": "^9.3.4",
     "is-ci": "^3.0.1",
-    "isbot": "^3.6.7",
+    "isbot": "^3.6.8",
     "pretty-cache-header": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "remix-utils": "^6.0.0",
-    "type-fest": "^3.7.1"
+    "remix-utils": "^6.1.0",
+    "type-fest": "^3.8.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "1.15.0-pre.2",
-    "@remix-run/eslint-config": "1.15.0-pre.2",
-    "@types/react": "^18.0.30",
+    "@remix-run/dev": "^1.15.0",
+    "@remix-run/eslint-config": "^1.15.0",
+    "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
     "@typescript/lib-dom": "npm:@types/web@^0.0.99",
     "autoprefixer": "^10.4.14",
     "del": "^7.0.0",
-    "eslint": "^8.36.0",
+    "eslint": "^8.37.0",
     "eslint-plugin-prefer-let": "^3.0.1",
     "gitignore-fs": "^2.2.2",
     "husky": "^8.0.3",
     "kleur": "^4.1.5",
-    "lint-staged": "^13.2.0",
+    "lint-staged": "^13.2.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
     "postcss-100vh-fix": "^1.0.2",
     "prettier": "^2.8.7",
-    "prettier-plugin-tailwindcss": "^0.2.5",
-    "tailwindcss": "3.3.0",
+    "prettier-plugin-tailwindcss": "^0.2.7",
+    "tailwindcss": "3.3.1",
     "tailwindcss-padding-safe": "^1.0.6",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.4"
   },
   "lint-staged": {
     "*.+(js|jsx|ts|tsx|cts|mts)": [
