--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
   "dependencies": {
     "@mcansh/remix-fastify": "^2.7.2",
     "@mcansh/remix-secure-headers": "^0.7.1",
-    "@remix-run/node": "^1.15.0",
-    "@remix-run/react": "^1.15.0",
+    "@remix-run/node": "0.0.0-nightly-4be6e9d-20230413",
+    "@remix-run/react": "0.0.0-nightly-4be6e9d-20230413",
+    "@remix-run/server-runtime": "0.0.0-nightly-4be6e9d-20230413",
     "clsx": "^1.2.1",
     "cross-env": "^7.0.3",
     "fastify": "^4.15.0",
@@ -33,13 +34,12 @@
     "pretty-cache-header": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "remix-utils": "^6.1.0",
-    "type-fest": "^3.8.0"
+    "remix-utils": "^6.1.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.15.0",
-    "@remix-run/eslint-config": "^1.15.0",
-    "@types/react": "^18.0.34",
+    "@remix-run/dev": "0.0.0-nightly-4be6e9d-20230413",
+    "@remix-run/eslint-config": "0.0.0-nightly-4be6e9d-20230413",
+    "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "@typescript/lib-dom": "npm:@types/web@^0.0.99",
     "autoprefixer": "^10.4.14",
@@ -66,5 +66,12 @@
     "*": [
       "prettier --write --ignore-unknown"
     ]
+  },
+  "overrides": {
+    "@remix-run/node": "0.0.0-nightly-4be6e9d-20230413",
+    "@remix-run/react": "0.0.0-nightly-4be6e9d-20230413",
+    "@remix-run/dev": "0.0.0-nightly-4be6e9d-20230413",
+    "@remix-run/eslint-config": "0.0.0-nightly-4be6e9d-20230413",
+    "@remix-run/server-runtime": "0.0.0-nightly-4be6e9d-20230413"
   }
 }
