chore(deps): bump to latest
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/package.json
+++ b/package.json
@@ -21,43 +21,43 @@
   "dependencies": {
     "@mcansh/remix-fastify": "^2.7.2",
     "@mcansh/remix-secure-headers": "^0.7.1",
-    "@remix-run/node": "0.0.0-nightly-4be6e9d-20230413",
-    "@remix-run/react": "0.0.0-nightly-4be6e9d-20230413",
-    "@remix-run/server-runtime": "0.0.0-nightly-4be6e9d-20230413",
+    "@remix-run/node": "0.0.0-nightly-b35bbf9-20230419",
+    "@remix-run/react": "0.0.0-nightly-b35bbf9-20230419",
+    "@remix-run/server-runtime": "0.0.0-nightly-b35bbf9-20230419",
     "clsx": "^1.2.1",
     "cross-env": "^7.0.3",
     "fastify": "^4.15.0",
     "fathom-client": "^3.5.0",
-    "glob": "^10.0.0",
+    "glob": "^10.2.2",
     "is-ci": "^3.0.1",
-    "isbot": "^3.6.8",
+    "isbot": "^3.6.10",
     "pretty-cache-header": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remix-utils": "^6.1.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "0.0.0-nightly-4be6e9d-20230413",
-    "@remix-run/eslint-config": "0.0.0-nightly-4be6e9d-20230413",
-    "@types/react": "^18.0.35",
+    "@remix-run/dev": "0.0.0-nightly-b35bbf9-20230419",
+    "@remix-run/eslint-config": "0.0.0-nightly-b35bbf9-20230419",
+    "@types/react": "^18.0.38",
     "@types/react-dom": "^18.0.11",
     "@typescript/lib-dom": "npm:@types/web@^0.0.99",
     "autoprefixer": "^10.4.14",
     "del": "^7.0.0",
-    "eslint": "^8.38.0",
+    "eslint": "^8.39.0",
     "eslint-plugin-prefer-let": "^3.0.1",
     "gitignore-fs": "^2.2.2",
     "husky": "^8.0.3",
     "kleur": "^4.1.5",
     "lint-staged": "^13.2.1",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.21",
+    "postcss": "^8.4.23",
     "postcss-100vh-fix": "^1.0.2",
-    "prettier": "^2.8.7",
+    "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.7",
     "tailwindcss": "3.3.1",
     "tailwindcss-padding-safe": "^1.0.6",
-    "typescript": "^5.0.4"
+    "typescript": "5.1.0-beta"
   },
   "lint-staged": {
     "*.+(js|jsx|ts|tsx|cts|mts)": [
