--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
   "dependencies": {
     "@mcansh/remix-fastify": "^2.7.2",
     "@mcansh/remix-secure-headers": "^0.7.1",
-    "@remix-run/node": "0.0.0-nightly-b2df1c7-20230426",
-    "@remix-run/react": "0.0.0-nightly-b2df1c7-20230426",
-    "@remix-run/server-runtime": "0.0.0-nightly-b2df1c7-20230426",
+    "@remix-run/node": "1.16.0-pre.1",
+    "@remix-run/react": "1.16.0-pre.1",
+    "@remix-run/server-runtime": "1.16.0-pre.1",
     "clsx": "^1.2.1",
     "cross-env": "^7.0.3",
-    "fastify": "^4.15.0",
+    "fastify": "^4.17.0",
     "fathom-client": "^3.5.0",
     "glob": "^10.2.2",
     "is-ci": "^3.0.1",
@@ -35,10 +35,10 @@
     "remix-utils": "^6.1.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "0.0.0-nightly-b2df1c7-20230426",
-    "@remix-run/eslint-config": "0.0.0-nightly-b2df1c7-20230426",
-    "@types/react": "^18.0.38",
-    "@types/react-dom": "^18.0.11",
+    "@remix-run/dev": "1.16.0-pre.1",
+    "@remix-run/eslint-config": "1.16.0-pre.1",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
     "@typescript/lib-dom": "npm:@types/web@^0.0.99",
     "autoprefixer": "^10.4.14",
     "del": "^7.0.0",
@@ -47,13 +47,13 @@
     "gitignore-fs": "^2.2.2",
     "husky": "^8.0.3",
     "kleur": "^4.1.5",
-    "lint-staged": "^13.2.1",
+    "lint-staged": "^13.2.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.23",
     "postcss-100vh-fix": "^1.0.2",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.7",
-    "tailwindcss": "3.3.1",
+    "tailwindcss": "3.3.2",
     "tailwindcss-padding-safe": "^1.0.6",
     "typescript": "5.1.0-beta"
   },
