--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Logan McAnsh <logan@mcan.sh> (https://mcan.sh)",
   "license": "MIT",
   "sideEffects": false,
+  "type": "module",
   "scripts": {
     "build": "run-s clean type-check && remix build",
     "clean": "./scripts/clean.mjs",
