--- a/package.json
+++ b/package.json
@@ -5,29 +5,31 @@
   "author": "Logan McAnsh <logan@mcan.sh> (https://mcan.sh)",
   "license": "MIT",
   "sideEffects": false,
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "build": "run-s clean type-check && remix build",
-    "clean": "./scripts/clean.js",
-    "dev": "remix dev -c 'node --require dotenv/config --watch ./server.js'",
-    "start": "cross-env NODE_ENV=production node ./server.js",
+    "clean": "./scripts/clean.mjs",
+    "dev": "sst bind \"remix dev -c 'node --require dotenv/config --watch ./server.mjs'\"",
+    "start": "cross-env NODE_ENV=production node ./server.mjs",
     "type-check": "tsc",
     "lint": "eslint --ignore-path .gitignore --cache --fix .",
     "format": "prettier --ignore-path .gitignore --ignore-unknown --write .",
     "validate": "run-p lint format type-check",
-    "prepare": "is-ci || husky install"
+    "prepare": "is-ci || husky install",
+    "sst:deploy": "sst deploy",
+    "sst:dev": "sst dev"
   },
   "dependencies": {
     "@mcansh/remix-fastify": "^2.7.3",
     "@mcansh/remix-secure-headers": "^0.7.1",
-    "@remix-run/node": "1.16.1-pre.0",
-    "@remix-run/react": "1.16.1-pre.0",
-    "@remix-run/server-runtime": "1.16.1-pre.0",
+    "@remix-run/node": "^1.16.1",
+    "@remix-run/react": "^1.16.1",
+    "@remix-run/server-runtime": "^1.16.1",
     "clsx": "^1.2.1",
     "cross-env": "^7.0.3",
     "fastify": "^4.17.0",
     "fathom-client": "^3.5.0",
-    "glob": "^10.2.4",
+    "glob": "^10.2.6",
     "is-ci": "^3.0.1",
     "isbot": "^3.6.10",
     "pretty-cache-header": "^1.0.0",
@@ -36,14 +38,16 @@
     "remix-utils": "^6.3.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "1.16.1-pre.0",
-    "@remix-run/eslint-config": "1.16.1-pre.0",
-    "@types/react": "^18.2.6",
+    "@remix-run/dev": "^1.16.1",
+    "@remix-run/eslint-config": "^1.16.1",
+    "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
     "@typescript/lib-dom": "npm:@types/web@^0.0.99",
     "autoprefixer": "^10.4.14",
+    "aws-cdk-lib": "^2.80.0",
+    "constructs": "^10.2.31",
     "del": "^7.0.0",
-    "eslint": "^8.40.0",
+    "eslint": "^8.41.0",
     "eslint-plugin-prefer-let": "^3.0.1",
     "gitignore-fs": "^2.2.2",
     "husky": "^8.0.3",
@@ -54,9 +58,10 @@
     "postcss-100vh-fix": "^1.0.2",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
-    "tailwindcss": "3.3.2",
+    "sst": "^2.10.2",
+    "tailwindcss": "^3.3.2",
     "tailwindcss-padding-safe": "^1.0.6",
-    "typescript": "5.1.0-beta"
+    "typescript": "^5.1.0-beta"
   },
   "lint-staged": {
     "*.+(js|jsx|ts|tsx|cts|mts)": [
