chore: pin sst deps
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "@types/react-dom": "^18.2.4",
     "@typescript/lib-dom": "npm:@types/web@^0.0.99",
     "autoprefixer": "^10.4.14",
-    "aws-cdk-lib": "^2.80.0",
-    "constructs": "^10.2.31",
+    "aws-cdk-lib": "2.79.1",
+    "constructs": "10.1.156",
     "del": "^7.0.0",
     "eslint": "^8.41.0",
     "eslint-plugin-prefer-let": "^3.0.1",
@@ -58,7 +58,7 @@
     "postcss-100vh-fix": "^1.0.2",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
-    "sst": "^2.10.2",
+    "sst": "2.11.1",
     "tailwindcss": "^3.3.2",
     "tailwindcss-padding-safe": "^1.0.6",
     "typescript": "^5.1.0-beta"
