--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "pretty-cache-header": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "remix-utils": "^6.3.0"
+    "remix-utils": "^6.3.0",
+    "zod": "3.21.4"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.16.1",
