--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@remix-run/node": "^1.16.1",
     "@remix-run/react": "^1.16.1",
     "@remix-run/server-runtime": "^1.16.1",
+    "cloudinary-build-url": "^0.2.4",
     "clsx": "^1.2.1",
     "cross-env": "^7.0.3",
     "fastify": "^4.17.0",
@@ -39,6 +40,7 @@
     "zod": "3.21.4"
   },
   "devDependencies": {
+    "@cld-apis/types": "^0.1.6",
     "@remix-run/dev": "^1.16.1",
     "@remix-run/eslint-config": "^1.16.1",
     "@types/react": "^18.2.7",
