--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -34,9 +34,9 @@ jobs:
       - name: 🤝 Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
+          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
+          role-duration-seconds: 900
 
       - name: Remove PR Preview
         run: |
