chore(deps): bump to latest
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
   "dependencies": {
     "@mcansh/remix-fastify": "^2.7.4",
     "@mcansh/remix-secure-headers": "^0.7.1",
-    "@remix-run/node": "0.0.0-nightly-a91ddce-20230627",
-    "@remix-run/react": "0.0.0-nightly-a91ddce-20230627",
-    "@remix-run/server-runtime": "0.0.0-nightly-a91ddce-20230627",
-    "@sentry/remix": "^7.56.0",
+    "@remix-run/node": "1.18.1",
+    "@remix-run/react": "1.18.1",
+    "@remix-run/server-runtime": "1.18.1",
+    "@sentry/remix": "^7.57.0",
     "cloudinary-build-url": "^0.2.4",
     "clsx": "^1.2.1",
     "cross-env": "^7.0.3",
-    "fastify": "^4.18.0",
+    "fastify": "^4.19.2",
     "fathom-client": "^3.5.0",
     "glob": "^10.3.1",
     "is-ci": "^3.0.1",
@@ -37,21 +37,21 @@
     "pretty-cache-header": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "remix-utils": "^6.4.1",
+    "remix-utils": "^6.6.0",
     "zod": "3.21.4"
   },
   "devDependencies": {
     "@cld-apis/types": "^0.1.6",
-    "@remix-run/dev": "0.0.0-nightly-a91ddce-20230627",
-    "@remix-run/eslint-config": "0.0.0-nightly-a91ddce-20230627",
+    "@remix-run/dev": "1.18.1",
+    "@remix-run/eslint-config": "1.18.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
-    "@typescript/lib-dom": "npm:@types/web@^0.0.102",
+    "@typescript/lib-dom": "npm:@types/web@^0.0.103",
     "autoprefixer": "^10.4.14",
     "aws-cdk-lib": "2.84.0",
     "constructs": "10.1.156",
     "del": "^7.0.0",
-    "eslint": "^8.43.0",
+    "eslint": "^8.44.0",
     "eslint-plugin-prefer-let": "^3.0.1",
     "gitignore-fs": "^2.2.2",
     "husky": "^8.0.3",
@@ -60,9 +60,9 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.24",
     "postcss-100vh-fix": "^1.0.2",
-    "prettier": "^2.8.8",
+    "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.3.0",
-    "sst": "2.17.6",
+    "sst": "2.18.4",
     "tailwindcss": "^3.3.2",
     "tailwindcss-padding-safe": "^1.0.6",
     "typescript": "5.2.0-dev.20230628"
