--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
 	"dependencies": {
 		"@mcansh/remix-fastify": "^2.7.4",
 		"@mcansh/remix-secure-headers": "^0.7.1",
-		"@remix-run/node": "1.18.1",
-		"@remix-run/react": "1.18.1",
-		"@remix-run/server-runtime": "1.18.1",
+		"@remix-run/node": "0.0.0-nightly-eccc180-20230707",
+		"@remix-run/react": "0.0.0-nightly-eccc180-20230707",
+		"@remix-run/server-runtime": "0.0.0-nightly-eccc180-20230707",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^1.2.1",
 		"cross-env": "^7.0.3",
@@ -41,8 +41,8 @@
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
-		"@remix-run/dev": "1.18.1",
-		"@remix-run/eslint-config": "1.18.1",
+		"@remix-run/dev": "0.0.0-nightly-eccc180-20230707",
+		"@remix-run/eslint-config": "0.0.0-nightly-eccc180-20230707",
 		"@types/react": "^18.2.14",
 		"@types/react-dom": "^18.2.6",
 		"@typescript/lib-dom": "npm:@types/web@^0.0.103",
@@ -61,7 +61,7 @@
 		"postcss-100vh-fix": "^1.0.2",
 		"prettier": "^3.0.0",
 		"prettier-plugin-tailwindcss": "^0.3.0",
-		"sst": "2.19.0",
+		"sst": "2.19.1",
 		"tailwindcss": "^3.3.2",
 		"tailwindcss-padding-safe": "^1.0.6",
 		"typescript": "5.2.0-dev.20230628"
