chore(deps): bump to latest
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/package.json
+++ b/package.json
@@ -22,15 +22,14 @@
 	"dependencies": {
 		"@mcansh/remix-fastify": "^2.7.4",
 		"@mcansh/remix-secure-headers": "^0.7.1",
-		"@remix-run/node": "0.0.0-nightly-eccc180-20230707",
-		"@remix-run/react": "0.0.0-nightly-eccc180-20230707",
-		"@remix-run/server-runtime": "0.0.0-nightly-eccc180-20230707",
+		"@remix-run/node": "0.0.0-nightly-c8936ac-20230712",
+		"@remix-run/react": "0.0.0-nightly-c8936ac-20230712",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^1.2.1",
 		"cross-env": "^7.0.3",
 		"fastify": "^4.19.2",
 		"fathom-client": "^3.5.0",
-		"glob": "^10.3.1",
+		"glob": "^10.3.3",
 		"is-ci": "^3.0.1",
 		"isbot": "^3.6.12",
 		"pretty-cache-header": "^1.0.0",
@@ -41,11 +40,12 @@
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
-		"@remix-run/dev": "0.0.0-nightly-eccc180-20230707",
-		"@remix-run/eslint-config": "0.0.0-nightly-eccc180-20230707",
+		"@remix-run/dev": "0.0.0-nightly-c8936ac-20230712",
+		"@remix-run/eslint-config": "0.0.0-nightly-c8936ac-20230712",
+		"@types/node": "^20.4.1",
 		"@types/react": "^18.2.14",
 		"@types/react-dom": "^18.2.6",
-		"@typescript/lib-dom": "npm:@types/web@^0.0.103",
+		"@typescript/lib-dom": "npm:@types/web@^0.0.105",
 		"autoprefixer": "^10.4.14",
 		"aws-cdk-lib": "2.84.0",
 		"constructs": "10.1.156",
@@ -60,8 +60,8 @@
 		"postcss": "^8.4.25",
 		"postcss-100vh-fix": "^1.0.2",
 		"prettier": "^3.0.0",
-		"prettier-plugin-tailwindcss": "^0.3.0",
-		"sst": "2.19.1",
+		"prettier-plugin-tailwindcss": "^0.4.0",
+		"sst": "2.21.1",
 		"tailwindcss": "^3.3.2",
 		"tailwindcss-padding-safe": "^1.0.6",
 		"typescript": "5.2.0-dev.20230628"
