--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
 	"dependencies": {
 		"@mcansh/remix-fastify": "^2.7.4",
 		"@mcansh/remix-secure-headers": "^0.7.1",
-		"@remix-run/node": "0.0.0-nightly-c8936ac-20230712",
-		"@remix-run/react": "0.0.0-nightly-c8936ac-20230712",
+		"@remix-run/node": "0.0.0-nightly-accd20c-20230714",
+		"@remix-run/react": "0.0.0-nightly-accd20c-20230714",
 		"cloudinary-build-url": "^0.2.4",
-		"clsx": "^1.2.1",
+		"clsx": "^2.0.0",
 		"cross-env": "^7.0.3",
 		"fastify": "^4.19.2",
 		"fathom-client": "^3.5.0",
@@ -33,36 +33,36 @@
 		"is-ci": "^3.0.1",
 		"isbot": "^3.6.12",
 		"pretty-cache-header": "^1.0.0",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"remix-utils": "^6.6.0",
-		"zod": "3.21.4"
+		"zod": "^3.21.4"
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
-		"@remix-run/dev": "0.0.0-nightly-c8936ac-20230712",
-		"@remix-run/eslint-config": "0.0.0-nightly-c8936ac-20230712",
-		"@types/node": "^20.4.1",
-		"@types/react": "^18.2.14",
-		"@types/react-dom": "^18.2.6",
-		"@typescript/lib-dom": "npm:@types/web@^0.0.105",
+		"@remix-run/dev": "0.0.0-nightly-accd20c-20230714",
+		"@remix-run/eslint-config": "0.0.0-nightly-accd20c-20230714",
+		"@types/node": "^20.4.2",
+		"@types/react": "^18.2.15",
+		"@types/react-dom": "^18.2.7",
+		"@typescript/lib-dom": "npm:@types/web@^0.0.107",
 		"autoprefixer": "^10.4.14",
 		"aws-cdk-lib": "2.84.0",
 		"constructs": "10.1.156",
 		"del": "^7.0.0",
-		"eslint": "^8.44.0",
+		"eslint": "^8.45.0",
 		"eslint-plugin-prefer-let": "^3.0.1",
 		"gitignore-fs": "^2.2.2",
 		"husky": "^8.0.3",
 		"kleur": "^4.1.5",
 		"lint-staged": "^13.2.3",
 		"npm-run-all": "^4.1.5",
-		"postcss": "^8.4.25",
+		"postcss": "^8.4.26",
 		"postcss-100vh-fix": "^1.0.2",
 		"prettier": "^3.0.0",
-		"prettier-plugin-tailwindcss": "^0.4.0",
-		"sst": "2.21.1",
-		"tailwindcss": "^3.3.2",
+		"prettier-plugin-tailwindcss": "^0.4.1",
+		"sst": "2.21.8",
+		"tailwindcss": "^3.3.3",
 		"tailwindcss-padding-safe": "^1.0.6",
 		"typescript": "5.2.0-dev.20230628"
 	},
