--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
 	},
 	"dependencies": {
 		"@mcansh/remix-fastify": "^2.8.0",
-		"@mcansh/remix-secure-headers": "^0.7.1",
-		"@remix-run/node": "0.0.0-nightly-accd20c-20230714",
-		"@remix-run/react": "0.0.0-nightly-accd20c-20230714",
+		"@mcansh/remix-secure-headers": "^0.7.2",
+		"@remix-run/node": "1.19.1",
+		"@remix-run/react": "1.19.1",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.0.0",
 		"cross-env": "^7.0.3",
@@ -31,7 +31,7 @@
 		"fathom-client": "^3.5.0",
 		"glob": "^10.3.3",
 		"is-ci": "^3.0.1",
-		"isbot": "^3.6.12",
+		"isbot": "^3.6.13",
 		"pretty-cache-header": "^1.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
@@ -40,12 +40,12 @@
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
-		"@remix-run/dev": "0.0.0-nightly-accd20c-20230714",
-		"@remix-run/eslint-config": "0.0.0-nightly-accd20c-20230714",
-		"@types/node": "^20.4.2",
+		"@remix-run/dev": "1.19.1",
+		"@remix-run/eslint-config": "1.19.1",
+		"@types/node": "^20.4.4",
 		"@types/react": "^18.2.15",
 		"@types/react-dom": "^18.2.7",
-		"@typescript/lib-dom": "npm:@types/web@^0.0.107",
+		"@typescript/lib-dom": "npm:@types/web@^0.0.111",
 		"autoprefixer": "^10.4.14",
 		"aws-cdk-lib": "2.84.0",
 		"constructs": "10.1.156",
@@ -57,11 +57,11 @@
 		"kleur": "^4.1.5",
 		"lint-staged": "^13.2.3",
 		"npm-run-all": "^4.1.5",
-		"postcss": "^8.4.26",
+		"postcss": "^8.4.27",
 		"postcss-100vh-fix": "^1.0.2",
 		"prettier": "^3.0.0",
 		"prettier-plugin-tailwindcss": "^0.4.1",
-		"sst": "2.22.1",
+		"sst": "2.22.5",
 		"tailwindcss": "^3.3.3",
 		"tailwindcss-padding-safe": "^1.0.6",
 		"typescript": "5.2.0-dev.20230628"
