--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
 	},
 	"dependencies": {
 		"@mcansh/remix-secure-headers": "^0.7.2",
-		"@remix-run/node": "1.19.1",
-		"@remix-run/react": "1.19.1",
+		"@remix-run/node": "1.19.3",
+		"@remix-run/react": "1.19.3",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.0.0",
 		"cross-env": "^7.0.3",
@@ -32,36 +32,36 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"remix-utils": "^6.6.0",
-		"zod": "^3.21.4"
+		"zod": "^3.22.2"
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
-		"@remix-run/dev": "1.19.1",
-		"@remix-run/eslint-config": "1.19.1",
-		"@types/node": "^20.4.4",
-		"@types/react": "^18.2.15",
+		"@remix-run/dev": "1.19.3",
+		"@remix-run/eslint-config": "1.19.3",
+		"@types/node": "^20.5.6",
+		"@types/react": "^18.2.21",
 		"@types/react-dom": "^18.2.7",
-		"@typescript/lib-dom": "npm:@types/web@^0.0.111",
-		"autoprefixer": "^10.4.14",
-		"aws-cdk-lib": "2.84.0",
-		"constructs": "10.1.156",
+		"@typescript/lib-dom": "npm:@types/web@^0.0.114",
+		"autoprefixer": "^10.4.15",
+		"aws-cdk-lib": "2.93.0",
+		"constructs": "10.2.69",
 		"del": "^7.0.0",
-		"eslint": "^8.45.0",
+		"eslint": "^8.48.0",
 		"eslint-plugin-prefer-let": "^3.0.1",
 		"gitignore-fs": "^2.2.2",
 		"glob": "^10.3.3",
 		"husky": "^8.0.3",
 		"kleur": "^4.1.5",
-		"lint-staged": "^13.2.3",
+		"lint-staged": "^14.0.1",
 		"npm-run-all": "^4.1.5",
-		"postcss": "^8.4.27",
+		"postcss": "^8.4.28",
 		"postcss-100vh-fix": "^1.0.2",
-		"prettier": "^3.0.0",
-		"prettier-plugin-tailwindcss": "^0.4.1",
-		"sst": "2.22.6",
+		"prettier": "^3.0.2",
+		"prettier-plugin-tailwindcss": "^0.5.3",
+		"sst": "2.24.15",
 		"tailwindcss": "^3.3.3",
 		"tailwindcss-padding-safe": "^1.0.6",
-		"typescript": "5.2.0-dev.20230628"
+		"typescript": "5.2.2"
 	},
 	"lint-staged": {
 		"*.+(js|jsx|ts|tsx|cts|mts)": [
