--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
 		"@remix-run/react": "1.19.3",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.0.0",
+		"compression": "^1.7.4",
 		"cross-env": "^7.0.3",
 		"fathom-client": "^3.5.0",
 		"is-ci": "^3.0.1",
 		"isbot": "^3.6.13",
+		"morgan": "^1.10.0",
 		"pretty-cache-header": "^1.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
@@ -43,7 +45,7 @@
 		"@types/react-dom": "^18.2.7",
 		"@typescript/lib-dom": "npm:@types/web@^0.0.114",
 		"autoprefixer": "^10.4.15",
-		"aws-cdk-lib": "2.93.0",
+		"aws-cdk-lib": "2.91.0",
 		"constructs": "10.2.69",
 		"del": "^7.0.0",
 		"eslint": "^8.48.0",
