--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,13 +29,10 @@ jobs:
         with:
           node-version: 16
 
-      - name: 🟧 Setup pnpm
-        uses: pnpm/action-setup@v2
+      - name: 🍞 Setup bun
+        uses: oven-sh/setup-bun@v1
         with:
-          version: 8
-          run_install: |
-            - recursive: true
-              args: [--frozen-lockfile, --strict-peer-dependencies]
+          bun-version: "0.8.1"
 
       - name: 🤝 Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
@@ -47,7 +44,7 @@ jobs:
       - name: 🚀 Deploy PR Preview
         if: github.event_name == 'pull_request'
         run: |
-          pnpm sst deploy --stage pr${{ github.event.number }}
+          bunx sst deploy --stage pr${{ github.event.number }}
         env:
           AWS_DOMAIN: ${{ secrets.AWS_DOMAIN }}
           AWS_CERTIFICATE_ARN: ${{ secrets.AWS_CERTIFICATE_ARN }}
@@ -58,7 +55,7 @@ jobs:
       - name: 🚀 Deploy Production
         if: ${{ github.ref == 'refs/heads/main' }}
         run: |
-          pnpm sst deploy --stage prod
+          bunx sst deploy --stage prod
         env:
           AWS_DOMAIN: ${{ secrets.AWS_DOMAIN }}
           AWS_CERTIFICATE_ARN: ${{ secrets.AWS_CERTIFICATE_ARN }}
