--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"@cld-apis/types": "^0.1.6",
 		"@remix-run/dev": "1.19.3",
 		"@remix-run/eslint-config": "1.19.3",
+		"@remix-run/serve": "1.19.3",
 		"@types/node": "^20.5.9",
 		"@types/react": "^18.2.21",
 		"@types/react-dom": "^18.2.7",
