--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
 	"author": "Logan McAnsh <logan@mcan.sh> (https://mcan.sh)",
 	"license": "MIT",
 	"sideEffects": false,
-	"type": "commonjs",
+	"type": "module",
 	"scripts": {
 		"build": "run-s type-check && remix build",
 		"clean": "./scripts/clean.mjs",
-		"dev": "remix dev",
+		"dev": "remix dev -c \"bun server.ts\"",
 		"type-check": "tsc",
 		"lint": "eslint --ignore-path .gitignore --cache --fix .",
 		"format": "prettier --ignore-path .gitignore --ignore-unknown --write .",
@@ -18,16 +18,14 @@
 	},
 	"dependencies": {
 		"@mcansh/remix-secure-headers": "^0.7.2",
-		"@remix-run/node": "1.19.3",
 		"@remix-run/react": "1.19.3",
+		"@remix-run/server-runtime": "1.19.3",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.0.0",
-		"compression": "^1.7.4",
 		"cross-env": "^7.0.3",
 		"fathom-client": "^3.5.0",
 		"is-ci": "^3.0.1",
 		"isbot": "^3.6.13",
-		"morgan": "^1.10.0",
 		"pretty-cache-header": "^1.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
@@ -38,14 +36,11 @@
 		"@cld-apis/types": "^0.1.6",
 		"@remix-run/dev": "1.19.3",
 		"@remix-run/eslint-config": "1.19.3",
-		"@remix-run/serve": "1.19.3",
-		"@types/node": "^20.6.0",
 		"@types/react": "^18.2.21",
 		"@types/react-dom": "^18.2.7",
 		"@typescript/lib-dom": "npm:@types/web@^0.0.114",
 		"autoprefixer": "^10.4.15",
-		"aws-cdk-lib": "2.91.0",
-		"constructs": "10.2.69",
+		"bun-types": "latest",
 		"del": "^7.1.0",
 		"eslint": "^8.49.0",
 		"eslint-plugin-prefer-let": "^3.0.1",
