--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"extends": [],
+	"exclude": ["./build", "./public/build"],
 	"include": ["remix.env.d.ts", "**/*.ts", "**/*.tsx"],
 	"compilerOptions": {
 		"allowJs": true,
@@ -9,17 +9,19 @@
 		"incremental": true,
 		"isolatedModules": true,
 		"jsx": "react-jsx",
-		"lib": ["DOM", "DOM.Iterable", "ES2019"],
+		"lib": ["DOM", "DOM.Iterable", "ES2022"],
 		"moduleResolution": "bundler",
 		"noEmit": true,
 		"noFallthroughCasesInSwitch": true,
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"strict": true,
-		"target": "ES2019",
+		"target": "ES2022",
+		"module": "ES2022",
 		"baseUrl": ".",
 		"paths": {
 			"~/*": ["./app/*"]
-		}
+		},
+		"types": ["bun-types"]
 	}
 }
