--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -40,3 +40,9 @@ jobs:
       - name: Remove PR Preview
         run: |
           pnpm sst remove --stage prod
+        env:
+          AWS_DOMAIN: ${{ secrets.AWS_DOMAIN }}
+          AWS_CERTIFICATE_ARN: ${{ secrets.AWS_CERTIFICATE_ARN }}
+          CLOUDINARY_CLOUD_NAME: ${{ secrets.CLOUDINARY_CLOUD_NAME }}
+          SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
+          SENTRY_REPORT_URL: ${{ secrets.SENTRY_REPORT_URL }}
