--- a/package.json
+++ b/package.json
@@ -5,31 +5,29 @@
 	"author": "Logan McAnsh <logan@mcan.sh> (https://mcan.sh)",
 	"license": "MIT",
 	"sideEffects": false,
-	"type": "commonjs",
+	"type": "module",
 	"scripts": {
 		"build": "run-s type-check && remix build",
 		"clean": "./scripts/clean.mjs",
-		"dev": "sst bind \"remix dev\"",
+		"dev": "remix dev -c \"bun run --hot ./server.ts\"",
 		"type-check": "tsc",
 		"lint": "eslint --ignore-path .gitignore --cache --fix .",
 		"format": "prettier --ignore-path .gitignore --ignore-unknown --write .",
 		"validate": "run-p lint format type-check",
 		"prepare": "is-ci || husky install",
-		"sst:deploy": "sst deploy",
-		"sst:dev": "sst dev"
+		"start": "cross-env NODE_ENV=production bun run ./server.ts"
 	},
 	"dependencies": {
 		"@mcansh/remix-secure-headers": "^0.7.2",
-		"@remix-run/node": "1.19.3",
+		"@remix-run/node": "^1.19.3",
 		"@remix-run/react": "1.19.3",
+		"@remix-run/server-runtime": "1.19.3",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.0.0",
-		"compression": "^1.7.4",
 		"cross-env": "^7.0.3",
 		"fathom-client": "^3.5.0",
 		"is-ci": "^3.0.1",
 		"isbot": "^3.6.13",
-		"morgan": "^1.10.0",
 		"pretty-cache-header": "^1.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
@@ -40,16 +38,13 @@
 		"@cld-apis/types": "^0.1.6",
 		"@remix-run/dev": "1.19.3",
 		"@remix-run/eslint-config": "1.19.3",
-		"@remix-run/serve": "1.19.3",
-		"@types/node": "^20.5.9",
 		"@types/react": "^18.2.21",
 		"@types/react-dom": "^18.2.7",
 		"@typescript/lib-dom": "npm:@types/web@^0.0.114",
 		"autoprefixer": "^10.4.15",
-		"aws-cdk-lib": "2.91.0",
-		"constructs": "10.2.69",
+		"bun-types": "latest",
 		"del": "^7.1.0",
-		"eslint": "^8.48.0",
+		"eslint": "^8.49.0",
 		"eslint-plugin-prefer-let": "^3.0.1",
 		"gitignore-fs": "^2.2.2",
 		"glob": "^10.3.4",
@@ -61,7 +56,6 @@
 		"postcss-100vh-fix": "^1.0.2",
 		"prettier": "^3.0.3",
 		"prettier-plugin-tailwindcss": "^0.5.4",
-		"sst": "2.24.26",
 		"tailwindcss": "^3.3.3",
 		"tailwindcss-padding-safe": "^1.0.6",
 		"typescript": "5.2.2"
@@ -73,5 +67,8 @@
 		"*": [
 			"prettier --write --ignore-unknown"
 		]
+	},
+	"engines": {
+		"node": ">=18.0.0"
 	}
 }
