--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
 	},
 	"dependencies": {
 		"@mcansh/remix-secure-headers": "^0.7.2",
-		"@remix-run/node": "^1.19.3",
-		"@remix-run/react": "1.19.3",
-		"@remix-run/server-runtime": "1.19.3",
+		"@remix-run/node": "pre",
+		"@remix-run/react": "pre",
+		"@remix-run/server-runtime": "pre",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.0.0",
 		"cross-env": "^7.0.3",
@@ -31,13 +31,13 @@
 		"pretty-cache-header": "^1.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"remix-utils": "^6.6.0",
+		"remix-utils": "next",
 		"zod": "^3.22.2"
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
-		"@remix-run/dev": "1.19.3",
-		"@remix-run/eslint-config": "1.19.3",
+		"@remix-run/dev": "pre",
+		"@remix-run/eslint-config": "pre",
 		"@types/react": "^18.2.21",
 		"@types/react-dom": "^18.2.7",
 		"@typescript/lib-dom": "npm:@types/web@^0.0.114",
