--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"start": "cross-env NODE_ENV=production bun run ./server.ts"
 	},
 	"dependencies": {
-		"@mcansh/remix-secure-headers": "^0.8.1",
+		"@mcansh/http-helmet": "^0.8.1",
 		"@remix-run/node": "2.0.0-pre.10",
 		"@remix-run/react": "2.0.0-pre.10",
 		"@remix-run/server-runtime": "2.0.0-pre.10",
