--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
 	"sideEffects": false,
 	"type": "module",
 	"scripts": {
-		"build": "node ./scripts/svg.js && npm run type-check && remix build",
+		"build": "node ./scripts/svg.js && npm run type-check && vite build && vite build --ssr",
 		"clean": "./scripts/clean.js",
-		"dev": "remix dev -c \"bun run ./server.ts\"",
+		"dev": "vite dev",
 		"type-check": "tsc",
 		"lint": "eslint --ignore-path .gitignore --cache --fix .",
 		"format": "prettier --ignore-path .gitignore --ignore-unknown --write .",
@@ -19,9 +19,9 @@
 	},
 	"dependencies": {
 		"@mcansh/http-helmet": "^0.8.1",
-		"@remix-run/node": "2.0.1",
-		"@remix-run/react": "2.0.1",
-		"@remix-run/server-runtime": "2.0.1",
+		"@remix-run/node": "0.0.0-nightly-09ed1c0-20231014",
+		"@remix-run/react": "0.0.0-nightly-09ed1c0-20231014",
+		"@remix-run/server-runtime": "0.0.0-nightly-09ed1c0-20231014",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.0.0",
 		"cross-env": "^7.0.3",
@@ -36,8 +36,8 @@
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
-		"@remix-run/dev": "2.0.1",
-		"@remix-run/eslint-config": "2.0.1",
+		"@remix-run/dev": "0.0.0-nightly-09ed1c0-20231014",
+		"@remix-run/eslint-config": "0.0.0-nightly-09ed1c0-20231014",
 		"@types/react": "^18.2.27",
 		"@types/react-dom": "^18.2.12",
 		"@typescript/lib-dom": "npm:@types/web@^0.0.116",
@@ -60,7 +60,9 @@
 		"svgstore": "^3.0.1",
 		"tailwindcss": "^3.3.3",
 		"tailwindcss-padding-safe": "^1.0.6",
-		"typescript": "5.2.2"
+		"typescript": "5.2.2",
+		"vite": "^4.4.11",
+		"vite-tsconfig-paths": "^4.2.1"
 	},
 	"lint-staged": {
 		"*.+(js|jsx|ts|tsx|cts|mts)": [
