--- a/package.json
+++ b/package.json
@@ -9,20 +9,18 @@
 	"scripts": {
 		"build": "node ./scripts/svg.js && npm run type-check && vite build && vite build --ssr",
 		"clean": "./scripts/clean.js",
-		"dev": "vite dev",
 		"type-check": "tsc",
 		"lint": "eslint --ignore-path .gitignore --cache --fix .",
 		"format": "prettier --ignore-path .gitignore --ignore-unknown --write .",
 		"validate": "run-p lint format type-check",
 		"prepare": "is-ci || husky install",
-		"start": "remix-serve ./build/index.js"
+		"dev": "node ./server.js",
+		"start": "NODE_ENV=production node ./server.js"
 	},
 	"dependencies": {
 		"@mcansh/http-helmet": "^0.8.1",
-		"@remix-run/node": "0.0.0-nightly-09ed1c0-20231014",
-		"@remix-run/react": "0.0.0-nightly-09ed1c0-20231014",
-		"@remix-run/serve": "0.0.0-nightly-09ed1c0-20231014",
-		"@remix-run/server-runtime": "0.0.0-nightly-09ed1c0-20231014",
+		"@remix-run/node": "0.0.0-nightly-49ddabc-20231025",
+		"@remix-run/react": "0.0.0-nightly-49ddabc-20231025",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.0.0",
 		"cross-env": "^7.0.3",
@@ -32,16 +30,16 @@
 		"pretty-cache-header": "^1.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"remix-utils": "7.0.2",
+		"remix-utils": "7.1.0",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
-		"@remix-run/dev": "0.0.0-nightly-09ed1c0-20231014",
-		"@remix-run/eslint-config": "0.0.0-nightly-09ed1c0-20231014",
-		"@types/react": "^18.2.27",
-		"@types/react-dom": "^18.2.12",
-		"@typescript/lib-dom": "npm:@types/web@^0.0.116",
+		"@remix-run/dev": "0.0.0-nightly-49ddabc-20231025",
+		"@remix-run/eslint-config": "0.0.0-nightly-49ddabc-20231025",
+		"@types/react": "^18.2.29",
+		"@types/react-dom": "^18.2.14",
+		"@typescript/lib-dom": "npm:@types/web@^0.0.117",
 		"autoprefixer": "^10.4.16",
 		"del": "^7.1.0",
 		"eslint": "^8.51.0",
@@ -51,17 +49,17 @@
 		"glob": "^10.3.10",
 		"husky": "^8.0.3",
 		"kleur": "^4.1.5",
-		"lint-staged": "^14.0.1",
+		"lint-staged": "^15.0.1",
 		"npm-run-all": "^4.1.5",
 		"postcss": "^8.4.31",
 		"postcss-100vh-fix": "^1.0.2",
 		"prettier": "^3.0.3",
-		"prettier-plugin-tailwindcss": "^0.5.5",
+		"prettier-plugin-tailwindcss": "^0.5.6",
 		"svgstore": "^3.0.1",
 		"tailwindcss": "^3.3.3",
 		"tailwindcss-padding-safe": "^1.0.6",
 		"typescript": "5.2.2",
-		"vite": "^4.4.11",
+		"vite": "^4.5.0",
 		"vite-tsconfig-paths": "^4.2.1"
 	},
 	"lint-staged": {
