chore: fastify with vite
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/package.json
+++ b/package.json
@@ -18,15 +18,17 @@
 		"start": "NODE_ENV=production node ./server.js"
 	},
 	"dependencies": {
+		"@fastify/middie": "^8.3.0",
+		"@fastify/static": "^6.12.0",
 		"@mcansh/http-helmet": "^0.9.0",
-		"@remix-run/express": "^2.2.0",
+		"@mcansh/remix-fastify": "^3.0.2",
 		"@remix-run/node": "2.2.0",
 		"@remix-run/react": "2.2.0",
 		"@remix-run/serve": "^2.2.0",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.0.0",
 		"cross-env": "^7.0.3",
-		"express": "^4.18.2",
+		"fastify": "^4.24.3",
 		"fathom-client": "^3.6.0",
 		"is-ci": "^3.0.1",
 		"isbot": "^3.7.0",
