--- a/package.json
+++ b/package.json
@@ -7,24 +7,28 @@
 	"sideEffects": false,
 	"type": "module",
 	"scripts": {
-		"build": "node ./scripts/svg.js && npm run type-check && remix build",
+		"build": "node ./scripts/svg.js && npm run type-check && vite build && vite build --ssr",
 		"clean": "./scripts/clean.js",
-		"dev": "remix dev -c \"bun run ./server.ts\"",
 		"type-check": "tsc",
 		"lint": "eslint --ignore-path .gitignore --cache --fix .",
 		"format": "prettier --ignore-path .gitignore --ignore-unknown --write .",
 		"validate": "run-p lint format type-check",
 		"prepare": "is-ci || husky install",
-		"start": "cross-env NODE_ENV=production bun run ./server.ts"
+		"dev": "node ./server.js",
+		"start": "NODE_ENV=production node ./server.js"
 	},
 	"dependencies": {
-		"@mcansh/http-helmet": "^0.8.2",
-		"@remix-run/node": "2.1.0",
-		"@remix-run/react": "2.1.0",
-		"@remix-run/server-runtime": "2.1.0",
+		"@fastify/middie": "^8.3.0",
+		"@fastify/static": "^6.12.0",
+		"@mcansh/http-helmet": "^0.9.0",
+		"@mcansh/remix-fastify": "^3.0.2",
+		"@remix-run/node": "2.2.0",
+		"@remix-run/react": "2.2.0",
+		"@remix-run/serve": "^2.2.0",
 		"cloudinary-build-url": "^0.2.4",
 		"clsx": "^2.0.0",
 		"cross-env": "^7.0.3",
+		"fastify": "^4.24.3",
 		"fathom-client": "^3.6.0",
 		"is-ci": "^3.0.1",
 		"isbot": "^3.7.0",
@@ -36,13 +40,12 @@
 	},
 	"devDependencies": {
 		"@cld-apis/types": "^0.1.6",
-		"@remix-run/dev": "2.1.0",
-		"@remix-run/eslint-config": "2.1.0",
+		"@remix-run/dev": "2.2.0",
+		"@remix-run/eslint-config": "2.2.0",
 		"@types/react": "^18.2.33",
 		"@types/react-dom": "^18.2.14",
 		"@typescript/lib-dom": "npm:@types/web@^0.0.119",
 		"autoprefixer": "^10.4.16",
-		"bun-types": "latest",
 		"del": "^7.1.0",
 		"eslint": "^8.52.0",
 		"eslint-plugin-prefer-let": "^3.0.1",
@@ -60,7 +63,9 @@
 		"svgstore": "^3.0.1",
 		"tailwindcss": "^3.3.5",
 		"tailwindcss-padding-safe": "^1.0.6",
-		"typescript": "5.2.2"
+		"typescript": "5.2.2",
+		"vite": "^4.5.0",
+		"vite-tsconfig-paths": "^4.2.1"
 	},
 	"lint-staged": {
 		"*.+(js|jsx|ts|tsx|cts|mts)": [
