chore: patch @remix-run/dev to add nonce to <Links />
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"lint": "eslint --ignore-path .gitignore --cache --fix .",
 		"format": "prettier --ignore-path .gitignore --cache --cache-location .prettiercache --ignore-unknown --write .",
 		"validate": "run-p lint format type-check",
-		"prepare": "is-ci || husky install",
+		"prepare": "node ./scripts/prepare.js",
 		"dev": "node ./server.js",
 		"start": "NODE_ENV=production node ./server.js"
 	},
@@ -58,6 +58,7 @@
 		"kleur": "^4.1.5",
 		"lint-staged": "^15.1.0",
 		"npm-run-all": "^4.1.5",
+		"patch-package": "^8.0.0",
 		"postcss": "^8.4.31",
 		"postcss-100vh-fix": "^1.0.2",
 		"prettier": "^3.1.0",
