ci: format prior to checking for changes, strip quotes from version
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/.github/workflows/remix-nightly.yml
+++ b/.github/workflows/remix-nightly.yml
@@ -39,8 +39,9 @@ jobs:
       - name: 📦 Bump Remix to latest nightly
         id: bump
         run: |
-          VERSION=$(npm info @remix-run/react --json | jq '."dist-tags".nightly')
+          VERSION=$(npm info @remix-run/react --json | jq -r '."dist-tags".nightly')
           npx --yes upgrade-remix@latest $VERSION
+          npm run format
           if [ "$(git status --porcelain)" ]; then
             echo "version=$VERSION" >> $GITHUB_OUTPUT
           fi
