ci: commit as github-actions[bot]
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/.github/workflows/remix-nightly.yml
+++ b/.github/workflows/remix-nightly.yml
@@ -56,3 +56,4 @@ jobs:
           commit-message: "chore(deps): bump remix to ${{ steps.bump.outputs.version }}"
           update-pull-request-title-and-body: true
           branch: actions/remix-nightly
+          author: "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"
