ci: npm supports filtering in the cli without needing jq
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/.github/workflows/remix-nightly.yml
+++ b/.github/workflows/remix-nightly.yml
@@ -39,7 +39,7 @@ jobs:
       - name: 📦 Bump Remix to latest nightly
         id: bump
         run: |
-          VERSION=$(npm info @remix-run/react --json | jq -r '."dist-tags".nightly')
+          VERSION=$(npm info @remix-run/react dist-tags.nightly)
           npx --yes upgrade-remix@latest $VERSION
           npm run format
           if [ "$(git status --porcelain)" ]; then
