chore: use tailwind-merge to override dark mode classes
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"remix-utils": "7.3.0",
+		"tailwind-merge": "^2.1.0",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
